[tool.poetry]
name = "sigi-cloud-infra"
version = "0.1.0"
description = ""
authors = ["Justin Hill <justin@so.dang.cool>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
python-openstackclient = "^7.0.0"
python-heatclient = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
